--- a/flixter/Base.lproj/Main.storyboard
+++ b/flixter/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="131" id="sw9-wT-2Yy" customClass="MovieTableViewCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="131" id="sw9-wT-2Yy" customClass="MovieTableViewCell">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="131"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sw9-wT-2Yy" id="YrH-9s-E8e">
@@ -49,6 +49,11 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <accessibility key="accessibilityConfiguration" identifier="movieCell"/>
+                                        <connections>
+                                            <outlet property="image" destination="bJZ-LD-ufU" id="EzY-oy-cdl"/>
+                                            <outlet property="summary" destination="8sK-KK-QsW" id="1Ym-MY-fOs"/>
+                                            <outlet property="title" destination="G33-Cz-Wxm" id="Udi-7a-CuI"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
